--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropdown": "^1.6.4",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
